--- a/css/student/student.css
+++ b/css/student/student.css
@@ -492,6 +492,10 @@ nav img {
   font-size: 15px;
 }
 
+.container.col-2 {
+  display: grid;
+}
+
 @media only screen and (max-width: 768px) {
   * {
     -webkit-tap-highlight-color: transparent !important;
