--- a/css/student/student.css
+++ b/css/student/student.css
@@ -504,6 +504,25 @@ nav img {
 
 .button-row .done-btn {
   pointer-events: none;
+  transition: 0.1s ease-out;
+}
+
+.button-row .done-btn .count-div {
+  width: 16px;
+  height: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #eee;
+  border-radius: 50%;
+  opacity: 0;
+  transition: 0.20s ease-out;
+}
+
+.button-row .done-btn .count-div span {
+  font-size: 10px;
+  font-weight: 500;
+  font-family: "Roboto", sans-serif;
 }
 
 .request-confirmation {
