--- a/css/admin/admin.scss
+++ b/css/admin/admin.scss
@@ -3,6 +3,7 @@
 @import "spinner";
 @import "options";
 @import "request-details";
+@import "programme";
 @import "notifications";
 @import "profile";
 
@@ -196,7 +197,8 @@ button {
 
 form.profile-card,
 .offset-form,
-.search {
+.search,
+.new-form {
   input {
     background: #f3f3f3;
     border-radius: 8px;
