--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,7 @@ body.index .form button {
 }
 
 .modal-container .modal.form .heading {
-  margin: 20px;
+  margin: 28px 24px;
   padding: 0;
   position: relative;
 }
