--- a/css/_modal.scss
+++ b/css/_modal.scss
@@ -56,7 +56,7 @@
     }
     &.form {
       .heading {
-        margin: 20px;
+        margin: 28px 24px;
         padding: 0;
         position: relative;
         h3 {
