--- a/css/student/_dropdown.scss
+++ b/css/student/_dropdown.scss
@@ -31,15 +31,16 @@
   background: white;
   border-radius: 8px;
   overflow: hidden;
-  transition: 0.3s ease-out;
+  transition: 0.1s ease-in-out;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24) !important;
   &.open {
-    max-height: 320px;
-    // overflow: auto;
-    overflow: none;
+    max-height: 80%;
+    overflow: auto;
   }
 
   .value {
+    margin: 0 !important;
+    border-bottom: 1px solid #ddd;
     padding: 12px 10px;
     font-size: 15px;
     cursor: pointer;
