Integrated firebase for uploading files to cloud

--- a/css/admin/admin.css
+++ b/css/admin/admin.css
@@ -303,6 +303,10 @@ nav .nav-profile {
   font-family: "Poppins", sans-serif;
 }
 
+.modal-body {
+  max-width: 400px;
+}
+
 .upload-btn {
   margin-top: 12px;
   padding: 8px 12px;
