--- a/css/admin/admin.css
+++ b/css/admin/admin.css
@@ -733,6 +733,15 @@ table .status:hover i, table .status:focus i {
   opacity: 1;
 }
 
+table .row-actions {
+  display: flex;
+  justify-content: space-between;
+}
+
+table .row-actions a {
+  margin-left: 12px;
+}
+
 @media screen and (min-height: 600px) and (max-height: 700px) {
   .container {
     margin: 0 0 0 15rem !important;
