--- a/css/admin/admin.scss
+++ b/css/admin/admin.scss
@@ -272,6 +272,13 @@ table {
       }
     }
   }
+  .row-actions {
+    display: flex;
+    justify-content: space-between;
+    a {
+      margin-left: 12px;
+    }
+  }
 }
 
 @media screen and (min-height: 600px) and (max-height: 700px) {
