--- a/css/admin/_request-details.scss
+++ b/css/admin/_request-details.scss
@@ -1,4 +1,5 @@
 .request-details {
+  margin-bottom: 36px !important;
   padding-bottom: 16px !important;
   display: grid !important;
   grid-template-columns: repeat(4, max-content);
