--- a/css/admin/admin.css
+++ b/css/admin/admin.css
@@ -251,6 +251,7 @@ nav .nav-profile {
 }
 
 .request-details {
+  margin-bottom: 36px !important;
   padding-bottom: 16px !important;
   display: grid !important;
   grid-template-columns: repeat(4, max-content);
