--- a/css/admin/admin.scss
+++ b/css/admin/admin.scss
@@ -238,12 +238,12 @@ table {
     border-top: 1px solid #ddd;
   }
   .status {
-    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     .arrow {
+      margin-left: -28px;
       height: 12px;
       width: 12px;
       padding: 6px;
@@ -251,7 +251,7 @@ table {
       justify-content: center;
       align-items: center;
       position: relative;
-      right: 40px;
+      right: 20px;
       cursor: pointer;
       i {
         position: absolute;
