--- a/css/admin/_request-details.scss
+++ b/css/admin/_request-details.scss
@@ -3,8 +3,8 @@
   padding-bottom: 16px !important;
   display: grid !important;
   grid-template-columns: repeat(4, max-content);
-  grid-template-rows: repeat(2, max-content);
-  column-gap: 60px;
+  grid-template-rows: repeat(2);
+  justify-content: space-between;
   row-gap: 12px !important;
   label {
     color: #666;
@@ -17,8 +17,59 @@
   }
 }
 
+.request-tag {
+  padding: 4px 10px;
+  border-radius: 24px;
+  font-size: 12px;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 6px;
+  transition: 0.1s ease-out;
+
+  &.approve-tag {
+    // background: 50
+    // color: 600
+    // color: 500
+    background: #e3f2fd;
+    color: #1e88e5;
+    cursor: pointer;
+    .fas {
+      color: #2196f3;
+    }
+    &:hover,
+    &:focus {
+      background: #bbdefb;
+      color: #1565c0;
+      .fas {
+        color: #1976d2;
+      }
+    }
+  }
+  &.completed-tag {
+    background: #e8f5e9;
+    color: #388e3c;
+  }
+  &.cancelled-tag {
+    background: #FFEBEE;
+    color: #E53935;
+  }
+  .fa-circle {
+    margin-top: 2px;
+    font-size: 5px;
+  }
+  .fa-check {
+    font-size: 8px;
+  }
+  .fa-times {
+    font-size: 9px;
+  }
+}
+
 .subjects {
   max-width: 650px;
+  margin: unset !important;
   display: flex;
   column-gap: 30px;
   row-gap: 30px;
