Request can be cancelled or re-approved

--- a/css/admin/_request-details.scss
+++ b/css/admin/_request-details.scss
@@ -3,7 +3,7 @@
   padding-bottom: 16px !important;
   display: grid !important;
   grid-template-columns: repeat(4, max-content);
-  grid-template-rows: repeat(2);
+  grid-template-rows: repeat(2, 17.27px);
   justify-content: space-between;
   row-gap: 12px !important;
   label {
@@ -17,6 +17,17 @@
   }
 }
 
+.tag-container {
+  display: flex;
+  flex-direction: column;
+  &:hover {
+    .hide-tag {
+      transform: translateY(0px);
+      opacity: 1;
+    }
+  }
+}
+
 .request-tag {
   padding: 4px 10px;
   border-radius: 24px;
@@ -27,7 +38,18 @@
   align-items: center;
   column-gap: 6px;
   transition: 0.1s ease-out;
-
+  z-index: 2;
+  &.hide-tag {
+    margin: 8px 0px;
+    transform: translateY(-30px);
+    z-index: 1 !important;
+    opacity: 0;
+    cursor: pointer;
+    &.cancel-tag:hover {
+      background: #ffcdd2;
+      color: #d32f2f;
+    }
+  }
   &.approve-tag {
     // background: 50
     // color: 600
@@ -51,9 +73,9 @@
     background: #e8f5e9;
     color: #388e3c;
   }
-  &.cancelled-tag {
-    background: #FFEBEE;
-    color: #E53935;
+  &.cancel-tag {
+    background: #ffebee;
+    color: #e53935;
   }
   .fa-circle {
     margin-top: 2px;
@@ -63,7 +85,7 @@
     font-size: 8px;
   }
   .fa-times {
-    font-size: 9px;
+    font-size: 10px;
   }
 }
 
