--- a/css/admin/admin.css
+++ b/css/admin/admin.css
@@ -282,6 +282,7 @@ nav .nav-profile {
 }
 
 .request-tag {
+  position: relative;
   padding: 4px 10px;
   border-radius: 24px;
   font-size: 12px;
@@ -290,15 +291,15 @@ nav .nav-profile {
   justify-content: center;
   align-items: center;
   column-gap: 6px;
-  transition: 0.1s ease-out;
+  transition: 0.15s ease-out;
   z-index: 2;
 }
 
 .request-tag.hide-tag {
   margin: 8px 0px;
   transform: translateY(-30px);
-  z-index: 1 !important;
   opacity: 0;
+  z-index: 1 !important;
   cursor: pointer;
 }
 
