Changes to modal, toast message when verified

--- a/css/_modal.scss
+++ b/css/_modal.scss
@@ -48,9 +48,19 @@
         padding: 8px 0;
         background: $red;
         border-radius: 8px;
+        display: grid;
+        grid-template-columns: max-content 15px;
+        column-gap: 8px;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
         font-size: 14px;
         color: white;
-        text-align: center;
+        i {
+          text-align: center;
+          transition: 0.2s ease-out;
+          font-size: 14px;
+        }
       }
     }
     &.verification {
