--- a/css/style.css
+++ b/css/style.css
@@ -257,9 +257,20 @@ body.index .form button {
   padding: 8px 0;
   background: #e20c18;
   border-radius: 8px;
+  display: grid;
+  grid-template-columns: max-content 15px;
+  column-gap: 8px;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
   font-size: 14px;
   color: white;
+}
+
+.modal-container .modal .modal-body button i {
   text-align: center;
+  transition: 0.2s ease-out;
+  font-size: 14px;
 }
 
 .modal-container .modal.verification .heading {
