--- a/css/_modal.scss
+++ b/css/_modal.scss
@@ -49,7 +49,6 @@
         background: $red;
         border-radius: 8px;
         display: grid;
-        grid-template-columns: max-content 15px;
         column-gap: 8px;
         justify-content: center;
         align-items: center;
@@ -69,6 +68,7 @@
       }
       button {
         margin-top: 10px;
+        grid-template-columns: max-content 15px;
       }
     }
     // new programme & new subject popup
@@ -94,6 +94,7 @@
           }
           .buttons {
             margin-top: 16px;
+            display: flex;
             align-self: flex-end;
             button {
               width: max-content !important;
