--- a/css/student/_dropdown.scss
+++ b/css/student/_dropdown.scss
@@ -24,18 +24,18 @@
 }
 
 .value-list {
-  max-height: 0;
   width: inherit;
   display: flex;
   flex-direction: column;
   background: white;
   border-radius: 8px;
-  overflow: hidden;
   transition: 0.1s ease-in-out;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24) !important;
+  z-index: -99;
+  opacity: 0;
   &.open {
-    max-height: 80%;
-    overflow: auto;
+    z-index: inherit;
+    opacity: 1;
   }
 
   .value {
@@ -45,6 +45,7 @@
     font-size: 15px;
     cursor: pointer;
     transition: unset;
+    opacity: 1;
     &:hover {
       background: #f3f3f3;
     }
@@ -52,6 +53,7 @@
       max-height: 0;
       overflow: hidden;
       padding: 0;
+      opacity: 0;
     }
   }
 }
