--- a/css/admin/admin.scss
+++ b/css/admin/admin.scss
@@ -73,12 +73,32 @@ button {
   display: flex;
   align-items: center;
   align-self: flex-start;
-  column-gap: 16px;
+  .fa-arrow-left {
+    height: 32px;
+    width: 32px;
+    margin-right: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-size: 14px;
+    transition: 0.2s ease-out;
+    &:hover,
+    &:focus {
+      background: #fdf0f0;
+      color: $red;
+    }
+    &:active {
+      background: #f9ced0;
+      transition: 0.05s;
+    }
+  }
   h1 {
     font-weight: 600;
   }
   button,
   a {
+    margin-left: 16px;
     padding: 6px 12px;
     display: flex;
     align-items: center;
